// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusOverlay renders correctly when left is focused 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when left is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1.015, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-bxae8r-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #4f0599;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-bxae8r-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-bxae8r-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1.03, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-f7e9vn-StyledBorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-qp6zds-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-qp6zds-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-qp6zds-Container-StyledSelectableCard:hover,
.cache-qp6zds-Container-StyledSelectableCard:focus-within,
.cache-qp6zds-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-qp6zds-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-f7e9vn-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="false"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-1a1gw3x-RadioInput ehkrmld1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-w8xgd7-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-left"
          >
            Left
          </label>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="true"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-1a1gw3x-RadioInput ehkrmld1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-w8xgd7-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-right"
          >
            Right
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with right value 1`] = `
<DocumentFragment>
  .cache-f7e9vn-StyledBorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-qp6zds-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-qp6zds-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-qp6zds-Container-StyledSelectableCard:hover,
.cache-qp6zds-Container-StyledSelectableCard:focus-within,
.cache-qp6zds-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-qp6zds-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-f7e9vn-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="false"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-1a1gw3x-RadioInput ehkrmld1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-w8xgd7-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-left"
          >
            Left
          </label>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="true"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-1a1gw3x-RadioInput ehkrmld1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-w8xgd7-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-p50c5x-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-right"
          >
            Right
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders with tooltip 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-f7e9vn-StyledBorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-qp6zds-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-qp6zds-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-qp6zds-Container-StyledSelectableCard:hover,
.cache-qp6zds-Container-StyledSelectableCard:focus-within,
.cache-qp6zds-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-qp6zds-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-qp6zds-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-qp6zds-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1yazv8a-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1yazv8a-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1yazv8a-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1a1gw3x-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1a1gw3x-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1a1gw3x-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1a1gw3x-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1a1gw3x-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1a1gw3x-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-w8xgd7-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-w8xgd7-StyledIcon .ehkrmld4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    aria-describedby=":ra:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      style="display: inline-flex;"
    >
      <div
        class="cache-f7e9vn-StyledBorderedBox e4ryteh1"
      >
        <div
          class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
          data-checked="false"
          data-disabled="false"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
            data-checked="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="cache-1a1gw3x-RadioInput ehkrmld1"
              id="test-left"
              name="test"
              type="radio"
              value="left"
            />
            <svg
              class="cache-w8xgd7-StyledIcon ehkrmld2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-p50c5x-InnerCircleRing ehkrmld4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            <label
              for="test-left"
            >
              Left
            </label>
          </div>
        </div>
        <div
          class="e4ryteh0 cache-qp6zds-Container-StyledSelectableCard e1s5n3hj1"
          data-checked="true"
          data-disabled="false"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj0 cache-1yazv8a-RadioContainer-StyledElement ehkrmld0"
            data-checked="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="cache-1a1gw3x-RadioInput ehkrmld1"
              id="test-right"
              name="test"
              type="radio"
              value="right"
            />
            <svg
              class="cache-w8xgd7-StyledIcon ehkrmld2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-p50c5x-InnerCircleRing ehkrmld4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            <label
              for="test-right"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
